--- a/product-info.html
+++ b/product-info.html
@@ -74,7 +74,7 @@
             <a class="zoom nav-link" href="sell.html">Vender</a>
           </li>
 
-          <li  style="width:300px;"></li>
+          <li  style="width:auto;"></li>
 
           <li class="nav-item">
             <div class="col row" role="search">
@@ -89,9 +89,9 @@
           <li  style="width:50px;"></li>
           <div class="btn-group row">
             
-            <div class="row mb-3" data-bs-toggle="dropdown" style="margin-top: 2%;">
+            <div class="row" data-bs-toggle="dropdown" style="margin-top: 2%;">
               <div class="col-1 zoom" id="picture"></div>
-              <div id="usuarioMg" value="1" style="margin-top: 2%;" class="col-8"></div>
+              <div id="usuarioMg" value="1" style="margin-top: 2%;" class="col-10"></div>
             </div>
 
             <ul class="dropdown-menu dropdown-menu-dark dropdown-menu-end" style="opacity: 0.7; width: 500px; background-color: black; color: white;">
