--- a/products.html
+++ b/products.html
@@ -35,7 +35,7 @@
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
 
-          <li  style="width:300px;"></li>
+          <li  style="width:auto;"></li>
 
           <li class="nav-item">
             <div class="col row" role="search">
@@ -50,9 +50,9 @@
           <li  style="width:50px;"></li>
           <div class="btn-group row">
             
-          <div class="row mb-3" data-bs-toggle="dropdown" style="margin-top: 2%;">
+          <div class="row" data-bs-toggle="dropdown" style="margin-top: 2%;">
             <div class="col-1" id="picture"></div>
-            <div id="usuarioMg" value="1" style="margin-top: 2%;" class="col-8"></div>
+            <div id="usuarioMg" value="1" style="margin-top: 2%;" class="col-10"></div>
           </div>
 
           <ul class="dropdown-menu dropdown-menu-dark dropdown-menu-end" style="opacity: 0.7; width: 500px; background-color: black; color: white;">
