--- a/product-info.html
+++ b/product-info.html
@@ -192,15 +192,15 @@
                             <form id="calif">
                               <p class="clasificacion">
                                 <a href="" class="zoom btn btn-dark" id="agregar" style="background-color:black; color:white; margin-left: 2rem;" class="btn"><b>Publicar</b></a>
-                                <input  id="radio1" type="radio" name="estrellas" onclick="cantEstrellas(5)" value="5">
+                                <input  id="radio1" type="radio" name="estrellas" value="5">
                                 <label for="radio1">★</label>
-                                <input id="radio2" type="radio" name="estrellas"  onclick="cantEstrellas(4)" value="4">
+                                <input id="radio2" type="radio" name="estrellas" value="4">
                                 <label for="radio2">★</label>
-                                <input id="radio3" type="radio" name="estrellas"  onclick="cantEstrellas(3)" value="3">
+                                <input id="radio3" type="radio" name="estrellas" value="3">
                                 <label for="radio3">★</label>
-                                <input id="radio4" type="radio" name="estrellas"  onclick="cantEstrellas(2)" value="2">
+                                <input id="radio4" type="radio" name="estrellas" value="2">
                                 <label for="radio4">★</label>
-                                <input id="radio5" type="radio" name="estrellas"  onclick="cantEstrellas(1)" value="1">
+                                <input id="radio5" type="radio" name="estrellas" value="1">
                                 <label for="radio5">★</label>
                               </p>
                             </form>
