--- a/product-info.html
+++ b/product-info.html
@@ -50,7 +50,7 @@
 </head>
 
 <body onload="cargarInicio()">
-  <nav id="navbar" class="navbar navbar-expand-lg navbar-dark p-1" style="background-color:#000; position: inherit">
+  <nav id="navbar" class="navbar navbar-expand-lg navbar-dark p-1" style="background-color:#000; position: relative">
     <div class="container">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -84,45 +84,45 @@
             </div>
           </li>
             
-            <div class="row" data-bs-toggle="dropdown" style="margin-top: 0,5%;">
-              <div class="col-1 zoom" id="picture"></div>
-              <div id="usuarioMg" value="1" style="margin-top: 2%;" class="col-10"></div>
+          <div class="row" data-bs-toggle="dropdown" style="margin-top: 0,5%;">
+            <div class="col-1 zoom" id="picture"></div>
+            <div id="usuarioMg" value="1" style="margin-top: 2%;" class="col-10"></div>
+          </div>
+
+          <ul class="dropdown-menu dropdown-menu-dark dropdown-menu-end">
+            <div id="usuarioLg">
+              <li class="usuario"style="margin-left: 1em;" id="usuario"></li> 
             </div>
 
-            <ul class="dropdown-menu dropdown-menu-dark dropdown-menu-end">
-              <div id="usuarioLg">
-                <li class="usuario"style="margin-left: 1em;" id="usuario"></li> 
-              </div>
+            <li>
+              <hr class="dropdown-divider">
+            </li>
 
-              <li>
-                <hr class="dropdown-divider">
-              </li>
+            <li>
+              <a class="btn btn-dark dropdown-item" href="my-profile.html">
+                <svg xmlns="http://www.w3.org/2000/svg" style="color: white; margin: 0px" width="25" height="25" fill="currentColor" class="bi bi-cart3" viewBox="0 0 448 512">
+                  <path d="M224 256c70.7 0 128-57.3 128-128S294.7 0 224 0S96 57.3 96 128s57.3 128 128 128zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512H418.3c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304H178.3z"/>                      
+                </svg> Mi perfil
+              </a>
+            </li>  
 
-              <li>
-                <a class="btn btn-dark dropdown-item" href="my-profile.html">
-                  <svg xmlns="http://www.w3.org/2000/svg" style="color: white; margin: 0px" width="25" height="25" fill="currentColor" class="bi bi-cart3" viewBox="0 0 448 512">
-                    <path d="M224 256c70.7 0 128-57.3 128-128S294.7 0 224 0S96 57.3 96 128s57.3 128 128 128zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512H418.3c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304H178.3z"/>                      
-                  </svg> Mi perfil
-                </a>
-              </li>  
+            <li>
+              <a class="btn btn-dark dropdown-item" href="cart.html">
+                <svg xmlns="http://www.w3.org/2000/svg" style="color: white; margin: 0px" width="25" height="25" fill="currentColor" class="bi bi-cart3" viewBox="0 0 16 16">
+                  <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l.84 4.479 9.144-.459L13.89 4H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+                </svg> Mi carrito<span id="miCarrito"></span>
+              </a>
+            </li>
 
-              <li>
-                <a class="btn btn-dark dropdown-item" href="cart.html">
-                  <svg xmlns="http://www.w3.org/2000/svg" style="color: white; margin: 0px" width="25" height="25" fill="currentColor" class="bi bi-cart3" viewBox="0 0 16 16">
-                    <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l.84 4.479 9.144-.459L13.89 4H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
-                  </svg> Mi carrito<span id="miCarrito"></span>
-                </a>
-              </li>
-
-              <li>
-                <a class="btn dropdown-item" onclick="salirUsuario()" >        
-                  <svg xmlns="http://www.w3.org/2000/svg" style="color: white; margin: 0px" width="25" height="25" fill="currentColor" class="bi bi-cart3" viewBox="0 0 576 512">
-                    <path d="M534.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-128-128c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L434.7 224 224 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l210.7 0-73.4 73.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l128-128zM192 96c17.7 0 32-14.3 32-32s-14.3-32-32-32l-64 0c-53 0-96 43-96 96l0 256c0 53 43 96 96 96l64 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-64 0c-17.7 0-32-14.3-32-32l0-256c0-17.7 14.3-32 32-32l64 0z"/>         
-                  </svg>  Cerrar sesión
-                </a>
-              </li>                  
-            </ul>
-          </div>
+            <li>
+              <a class="btn dropdown-item" onclick="salirUsuario()" >        
+                <svg xmlns="http://www.w3.org/2000/svg" style="color: white; margin: 0px" width="25" height="25" fill="currentColor" class="bi bi-cart3" viewBox="0 0 576 512">
+                  <path d="M534.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-128-128c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L434.7 224 224 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l210.7 0-73.4 73.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l128-128zM192 96c17.7 0 32-14.3 32-32s-14.3-32-32-32l-64 0c-53 0-96 43-96 96l0 256c0 53 43 96 96 96l64 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-64 0c-17.7 0-32-14.3-32-32l0-256c0-17.7 14.3-32 32-32l64 0z"/>         
+                </svg>  Cerrar sesión
+              </a>
+            </li>                  
+          </ul>
+        </div>
         </ul>
       </div>
     </div>
