--- a/my-profile.html
+++ b/my-profile.html
@@ -27,7 +27,7 @@
 </head>
 
 <body onload="cargarInicio()">
-  <nav id="navbar" class="navbar navbar-expand-lg navbar-dark p-1" style="background-color:#000; position: absolute">
+  <nav id="navbar" class="navbar navbar-expand-lg navbar-dark p-1" style="background-color:#000; position: relative">
     <div class="container">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -105,9 +105,44 @@
     </div>
   </nav>
   <main id="main">
-    <div class="container">
-      <div class="alert alert-danger text-center" role="alert">
-        <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
+    <div class="container mt-3">
+      <h2 class="text-center">Perfil</h2>
+      <div class="row">
+        <div class="col-lg-3">
+          <div class="mt-5" id="fotoPerfil">
+            <li class="text-center" type="button" aria-expanded="false" id="menuImg">
+              <div id="picture">
+                <svg xmlns="http://www.w3.org/2000/svg" style="color:gray; margin: 1px" width="150" height="150" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
+                <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
+                <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
+              </svg>
+
+              </div>
+            </li>
+          </div>
+        </div>
+        <div class="col-lg-9">
+          <div class="row g-3">
+            <div class="col m-4">
+              <label class="mt-4 m-2">Nombre</label>
+              <input type="text" class="form-control " placeholder="Nombre" aria-label="Nombre" id="name">
+              <label class="mt-4 m-2">Apellido</label>
+              <input type="text" class="form-control" placeholder="Apellido" aria-label=" Apellido" id="lastName">
+              <label class="mt-5 m-2">Email</label>
+              <input type="email" class="form-control" placeholder="ejemplo@email.com" aria-label=" Email" id="email">
+            </div>
+      
+            <div class="col m-4">
+              <label class="mt-4 m-2">Segundo nombre</label>
+              <input type="text" class="form-control" placeholder="Segundo Nombre" aria-label="Segundo Nombre">
+              <label class="mt-4 m-2">Segundo apellido</label>
+              <input type="text" class="form-control" placeholder="Segundo Apellido" aria-label="Segundo Apellido">
+              <label class="mt-5 m-2">Teléfono de contacto</label>
+              <input type="text" class="form-control" placeholder="0900 0000" aria-label="Teléfono de contacto">
+
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </main>
